nc-c__list.is-open z-index fix

--- a/src/css/project/_nc-c.sass
+++ b/src/css/project/_nc-c.sass
@@ -181,7 +181,7 @@
       position: absolute
       top: auto
       width: auto
-      z-index: 1
+      z-index: 2
 
       @media(min-height: 650px)
         bottom: 110px
